fix: z-index

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -66,3 +66,7 @@ html.dark::view-transition-old(root) {
 html.dark::view-transition-new(root) {
   z-index: 1;
 }
+
+.medium-zoom-image--opened {
+  z-index: 999;
+}
